[gd_scene load_steps=15 format=4 uid="uid://cj8drj4taml47"]

[ext_resource type="Script" path="res://scripts/memory_minigame.gd" id="1_07s3b"]
[ext_resource type="PackedScene" uid="uid://c2iafl58bub3k" path="res://scenes/platforming_player.tscn" id="1_p60kw"]
[ext_resource type="TileSet" uid="uid://bhw4bxuqfh87o" path="res://assets/1bitplatformerpack/platforming_tileset.tres" id="2_5ouc1"]
[ext_resource type="PackedScene" uid="uid://b3wrna5ys5pat" path="res://scenes/memory_object.tscn" id="3_dy1cj"]
[ext_resource type="Texture2D" uid="uid://dulny5a4bu68" path="res://assets/1bitplatformerpack/Tiles/Default/tile_0042_orange.png" id="4_hsgpn"]
[ext_resource type="Texture2D" uid="uid://bjjxrdcv0x4sd" path="res://assets/1bitplatformerpack/Tiles/Default/tile_0042_yellow.png" id="5_0530w"]
[ext_resource type="Texture2D" uid="uid://b3jbr4c3xacfm" path="res://assets/1bitplatformerpack/Tiles/Default/tile_0042_green.png" id="6_exu8n"]
[ext_resource type="Texture2D" uid="uid://dgiyw06d7e24e" path="res://assets/1bitplatformerpack/Tiles/Default/tile_0042_blue.png" id="7_dit4u"]
[ext_resource type="Texture2D" uid="uid://dfmsiasxpc1r3" path="res://assets/1bitplatformerpack/Tiles/Default/tile_0042_purple.png" id="8_fodfo"]
[ext_resource type="Texture2D" uid="uid://dtua5w46nch2t" path="res://assets/1bitplatformerpack/Tiles/Default/tile_0042_pink.png" id="9_foywg"]
[ext_resource type="Script" path="res://scripts/memory_question_label.gd" id="10_bg1cy"]
[ext_resource type="FontFile" uid="uid://cm8dnumwsttrn" path="res://assets/fonts/Silkscreen/slkscr.ttf" id="10_mslxx"]
[ext_resource type="Script" path="res://scripts/memory_history.gd" id="10_ptysf"]
[ext_resource type="PackedScene" uid="uid://bgwqpaqgk52bi" path="res://scenes/countdown_label.tscn" id="10_uxlvj"]

[node name="MemoryMinigame" type="Node2D"]
script = ExtResource("1_07s3b")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AADu/wkAAQAKABAAAADv/wkAAQALABAAAADw/wkAAQALABAAAADx/wkAAQALABAAAADy/wkAAQALABAAAADz/wkAAQALABAAAAD0/wkAAQALABAAAAD1/wkAAQALABAAAAD2/wkAAQALABAAAAD3/wkAAQALABAAAAD4/wkAAQALABAAAAD5/wkAAQALABAAAAD6/wkAAQALABAAAAD7/wkAAQALABAAAAD8/wkAAQALABAAAAD9/wkAAQALABAAAAD+/wkAAQALABAAAAD//wkAAQALABAAAAAAAAkAAQALABAAAAABAAkAAQALABAAAAACAAkAAQALABAAAAADAAkAAQALABAAAAAEAAkAAQALABAAAAAFAAkAAQALABAAAAAGAAkAAQALABAAAAAHAAkAAQALABAAAAAIAAkAAQALABAAAAAJAAkAAQALABAAAAAKAAkAAQALABAAAAALAAkAAQALABAAAAAMAAkAAQALABAAAAANAAkAAQALABAAAAAOAAkAAQALABAAAAAPAAkAAQALABAAAAAQAAkAAQALABAAAAARAAkAAQAMABAAAADw//f/AQARABEAAADx//f/AQASABEAAAAPAPf/AQATABEAAADy//f/AQASABEAAADz//f/AQASABEAAAD0//f/AQASABEAAAD1//f/AQASABEAAAD2//f/AQASABEAAAD3//f/AQASABEAAAD4//f/AQASABEAAAD5//f/AQASABEAAAD6//f/AQASABEAAAD7//f/AQASABEAAAD8//f/AQASABEAAAD9//f/AQASABEAAAD+//f/AQASABEAAAD///f/AQASABEAAAAAAPf/AQASABEAAAABAPf/AQASABEAAAACAPf/AQASABEAAAADAPf/AQASABEAAAAEAPf/AQASABEAAAAFAPf/AQASABEAAAAGAPf/AQASABEAAAAHAPf/AQASABEAAAAIAPf/AQASABEAAAAJAPf/AQASABEAAAAKAPf/AQASABEAAAALAPf/AQASABEAAAAMAPf/AQASABEAAAANAPf/AQASABEAAAAOAPf/AQASABEAAADw////AQARABMAAAAPAP//AQATABMAAADx////AQASABMAAADy////AQASABMAAADz////AQASABMAAAD0////AQASABMAAAD1////AQASABMAAAD2////AQASABMAAAD3////AQASABMAAAD4////AQASABMAAAD5////AQASABMAAAD6////AQASABMAAAD7////AQASABMAAAD8////AQASABMAAAD9////AQASABMAAAD+////AQASABMAAAD/////AQASABMAAAAAAP//AQASABMAAAABAP//AQASABMAAAACAP//AQASABMAAAADAP//AQASABMAAAAEAP//AQASABMAAAAFAP//AQASABMAAAAGAP//AQASABMAAAAHAP//AQASABMAAAAIAP//AQASABMAAAAJAP//AQASABMAAAAKAP//AQASABMAAAALAP//AQASABMAAAAMAP//AQASABMAAAANAP//AQASABMAAAAOAP//AQASABMAAADw//j/AQARABIAAADw//n/AQARABIAAADw//r/AQARABIAAADw//v/AQARABIAAADw//z/AQARABIAAADw//3/AQARABIAAADw//7/AQARABIAAAAPAPj/AQATABIAAAAPAPn/AQATABIAAAAPAPr/AQATABIAAAAPAPv/AQATABIAAAAPAPz/AQATABIAAAAPAP3/AQATABIAAAAPAP7/AQATABIAAADx//j/AQASABIAAADy//j/AQASABIAAADz//j/AQASABIAAAD0//j/AQASABIAAAD1//j/AQASABIAAAD2//j/AQASABIAAAD3//j/AQASABIAAAD4//j/AQASABIAAAD5//j/AQASABIAAAD6//j/AQASABIAAAD7//j/AQASABIAAAD8//j/AQASABIAAAD9//j/AQASABIAAAD+//j/AQASABIAAAD///j/AQASABIAAAAAAPj/AQASABIAAAABAPj/AQASABIAAAACAPj/AQASABIAAAADAPj/AQASABIAAAAEAPj/AQASABIAAAAFAPj/AQASABIAAAAGAPj/AQASABIAAAAHAPj/AQASABIAAAAIAPj/AQASABIAAAAJAPj/AQASABIAAAAKAPj/AQASABIAAAALAPj/AQASABIAAAAMAPj/AQASABIAAAANAPj/AQASABIAAAAOAPj/AQASABIAAAAOAPn/AQASABIAAAAOAPr/AQASABIAAAAOAPv/AQASABIAAAAOAPz/AQASABIAAAAOAP3/AQASABIAAAAOAP7/AQASABIAAAANAP7/AQASABIAAAAMAP7/AQASABIAAAALAP7/AQASABIAAAAKAP7/AQASABIAAAAJAP7/AQASABIAAAAIAP7/AQASABIAAAAHAP7/AQASABIAAAAGAP7/AQASABIAAAAEAP7/AQAAAAAAAAADAP7/AQAAAAAAAAACAP7/AQAAAAAAAAABAP7/AQAAAAAAAAAAAP7/AQAAAAAAAAD///7/AQAAAAAAAAD+//7/AQAAAAAAAAD9//7/AQAAAAAAAAD8//7/AQAAAAAAAAD7//7/AQAAAAAAAAD6//7/AQASABIAAAD5//7/AQASABIAAAD4//7/AQASABIAAAD3//7/AQASABIAAAD2//7/AQASABIAAAD1//7/AQASABIAAAD0//7/AQASABIAAADz//7/AQASABIAAAAFAP7/AQASABIAAADx//3/AQASABIAAADx//z/AQASABIAAADx//v/AQASABIAAADx//r/AQASABIAAADx//n/AQASABIAAADy//n/AQASABIAAADz//n/AQASABIAAAD0//n/AQASABIAAAD1//n/AQASABIAAAD2//n/AQASABIAAAD3//n/AQASABIAAAD4//n/AQASABIAAAD5//n/AQASABIAAAD6//n/AQASABIAAAD7//n/AQASABIAAAD8//n/AQASABIAAAD9//n/AQASABIAAAD+//n/AQASABIAAAD///n/AQASABIAAAAAAPn/AQASABIAAAABAPn/AQASABIAAAACAPn/AQASABIAAAADAPn/AQASABIAAAAEAPn/AQASABIAAAAFAPn/AQASABIAAAAGAPn/AQASABIAAAAHAPn/AQASABIAAAAIAPn/AQASABIAAAAJAPn/AQASABIAAAAKAPn/AQASABIAAAALAPn/AQASABIAAAAMAPn/AQASABIAAAANAPn/AQASABIAAAANAPr/AQASABIAAAANAPv/AQASABIAAAANAPz/AQASABIAAAANAP3/AQASABIAAAAMAP3/AQASABIAAAALAP3/AQASABIAAAAKAP3/AQASABIAAAAJAP3/AQASABIAAAAIAP3/AQASABIAAAAHAP3/AQASABIAAAAGAP3/AQASABIAAAAFAP3/AQASABIAAAAEAP3/AQASABIAAAADAP3/AQASABIAAAACAP3/AQASABIAAAABAP3/AQASABIAAAAAAP3/AQASABIAAAAAAPz/AQASABIAAAD///z/AQASABIAAAD+//z/AQASABIAAAD9//z/AQASABIAAAD8//z/AQASABIAAAD7//z/AQASABIAAAD6//z/AQASABIAAAD5//z/AQASABIAAAD5//3/AQASABIAAAD4//3/AQASABIAAAD3//3/AQASABIAAAD2//3/AQASABIAAAD1//3/AQASABIAAAD0//3/AQASABIAAADz//3/AQASABIAAAD6//3/AQASABIAAAD7//3/AQASABIAAAD8//3/AQASABIAAAD9//3/AQASABIAAAD+//3/AQASABIAAAD///3/AQASABIAAADy//3/AQASABIAAADy//z/AQASABIAAADy//v/AQASABIAAADy//r/AQASABIAAADz//r/AQASABIAAADz//v/AQASABIAAAD0//r/AQASABIAAAD0//v/AQASABIAAADz//z/AQASABIAAAD0//z/AQASABIAAAD1//r/AQASABIAAAD1//v/AQASABIAAAD2//v/AQASABIAAAD2//z/AQASABIAAAD3//v/AQASABIAAAD4//v/AQASABIAAAD4//r/AQASABIAAAD3//r/AQASABIAAAD1//z/AQASABIAAAD3//z/AQASABIAAAD2//r/AQASABIAAAD5//v/AQASABIAAAD5//r/AQASABIAAAD4//z/AQASABIAAAAAAPv/AQASABIAAAABAPv/AQASABIAAAACAPv/AQASABIAAAADAPv/AQASABIAAAAEAPv/AQASABIAAAAFAPv/AQASABIAAAAGAPv/AQASABIAAAAHAPv/AQASABIAAAAIAPv/AQASABIAAAAJAPv/AQASABIAAAAJAPz/AQASABIAAAAKAPz/AQASABIAAAALAPz/AQASABIAAAAMAPz/AQASABIAAAAIAPz/AQASABIAAAAHAPz/AQASABIAAAAGAPz/AQASABIAAAAFAPz/AQASABIAAAAEAPz/AQASABIAAAADAPz/AQASABIAAAACAPz/AQASABIAAAABAPz/AQASABIAAAD9//v/AQASABIAAAD8//v/AQASABIAAAD7//v/AQASABIAAAD6//v/AQASABIAAAD6//r/AQASABIAAAD7//r/AQASABIAAAD8//r/AQASABIAAAD+//v/AQASABIAAAD///v/AQASABIAAAAKAPv/AQASABIAAAALAPv/AQASABIAAAAMAPv/AQASABIAAAAMAPr/AQASABIAAAALAPr/AQASABIAAAAKAPr/AQASABIAAAAJAPr/AQASABIAAAAIAPr/AQASABIAAAAHAPr/AQASABIAAAAGAPr/AQASABIAAAAFAPr/AQASABIAAAAEAPr/AQASABIAAAADAPr/AQASABIAAAACAPr/AQASABIAAAABAPr/AQASABIAAAAAAPr/AQASABIAAAD///r/AQASABIAAAD+//r/AQASABIAAAD9//r/AQASABIAAADw/wgAAQAAAAAAAAD1/wgAAQAAAAAAAAD7/wgAAQAAAAAAAAAAAAgAAQAAAAAAAAAFAAgAAQAAAAAAAAAKAAgAAQAAAAAAAAAPAAgAAQAAAAAAAADx//7/AQAAAAAAAADy//7/AQAAAAAAAADu//b/AQAAAAAAAADv//b/AQAAAAAAAADw//b/AQAAAAAAAADx//b/AQAAAAAAAADy//b/AQAAAAAAAADz//b/AQAAAAAAAAD0//b/AQAAAAAAAAD1//b/AQAAAAAAAAD2//b/AQAAAAAAAAD3//b/AQAAAAAAAAD4//b/AQAAAAAAAAD5//b/AQAAAAAAAAD6//b/AQAAAAAAAAD7//b/AQAAAAAAAAD8//b/AQAAAAAAAAD9//b/AQAAAAAAAAD+//b/AQAAAAAAAAD///b/AQAAAAAAAAAAAPb/AQAAAAAAAAABAPb/AQAAAAAAAAACAPb/AQAAAAAAAAADAPb/AQAAAAAAAAAEAPb/AQAAAAAAAAAFAPb/AQAAAAAAAAAGAPb/AQAAAAAAAAAHAPb/AQAAAAAAAAAIAPb/AQAAAAAAAAAJAPb/AQAAAAAAAAAKAPb/AQAAAAAAAAALAPb/AQAAAAAAAAAMAPb/AQAAAAAAAAANAPb/AQAAAAAAAAAOAPb/AQAAAAAAAAAPAPb/AQAAAAAAAAAQAPb/AQAAAAAAAAARAPb/AQAAAAAAAAAQAPf/AQAAAAAAAAARAPf/AQAAAAAAAAAQAPj/AQAAAAAAAAAQAPn/AQAAAAAAAAAQAPr/AQAAAAAAAAAQAPv/AQAAAAAAAAAQAPz/AQAAAAAAAAAQAP3/AQAAAAAAAAAQAP7/AQAAAAAAAAAQAP//AQAAAAAAAAARAP//AQAAAAAAAAARAP7/AQAAAAAAAAARAP3/AQAAAAAAAAARAPz/AQAAAAAAAAARAPv/AQAAAAAAAAARAPr/AQAAAAAAAAARAPn/AQAAAAAAAAARAPj/AQAAAAAAAAAQAAAAAQAAAAAAAAARAAAAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAAQAAgAAQARAAAAAAAQAAcAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAEAAQAAAAAAAAAPAAAAAQAAAAAAAAAOAAAAAQATAAAAAAANAAAAAQATAAAAAAAMAAAAAQATAAAAAAALAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAADAAAAAQAAAAAAAAACAAAAAQAAAAAAAAABAAAAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAD//wEAAQAAAAAAAAD+/wEAAQAAAAAAAAD9/wEAAQAAAAAAAAD8/wAAAQAAAAAAAAD7/wAAAQAAAAAAAAD6/wAAAQAAAAAAAAD5/wAAAQAAAAAAAAD4/wAAAQAAAAAAAAD3/wAAAQAAAAAAAAD2/wAAAQAAAAAAAAD1/wAAAQAAAAAAAAD0/wAAAQAAAAAAAADz/wAAAQAAAAAAAADy/wAAAQATAAAAAADx/wAAAQATAAAAAADw/wAAAQAAAAAAAADv/wAAAQAAAAAAAADu/wAAAQAAAAAAAADu////AQAAAAAAAADu//7/AQAAAAAAAADu//3/AQAAAAAAAADu//z/AQAAAAAAAADu//v/AQAAAAAAAADu//r/AQAAAAAAAADu//n/AQAAAAAAAADu//j/AQAAAAAAAADu//f/AQAAAAAAAADv//f/AQAAAAAAAADv//j/AQAAAAAAAADv//n/AQAAAAAAAADv//r/AQAAAAAAAADv//v/AQAAAAAAAADv//z/AQAAAAAAAADv//3/AQAAAAAAAADv//7/AQAAAAAAAADv////AQAAAAAAAAD9/wAAAQAAAAAAAAD+/wAAAQAAAAAAAAD//wAAAQAAAAAAAADu/wEAAQAAAAAAAADu/wIAAQAAAAAAAADu/wMAAQAAAAAAAADu/wQAAQAAAAAAAADu/wUAAQAAAAAAAADu/wYAAQAAAAAAAADu/wcAAQAAAAAAAADu/wgAAQARAAAAAADv/wgAAQAAAAAAAADv/wcAAQAAAAAAAADv/wYAAQAAAAAAAADv/wUAAQAAAAAAAADv/wQAAQAAAAAAAADv/wMAAQAAAAAAAADv/wIAAQAAAAAAAADv/wEAAQAAAAAAAADw/wEAAQAAAAAAAADx/wEAAQATAAEAAADy/wEAAQATAAAAAADz/wEAAQAAAAAAAAD0/wEAAQAAAAAAAAD1/wEAAQAAAAAAAAD2/wEAAQAAAAAAAAD3/wEAAQAAAAAAAAD4/wEAAQAAAAAAAAD5/wEAAQAAAAAAAAD6/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAD8/wEAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAADAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAAKAAEAAQAAAAAAAAALAAEAAQAAAAAAAAAMAAEAAQATAAAAAAANAAEAAQATAAAAAAAOAAEAAQATAAEAAAAPAAEAAQAAAAAAAAAOAAgAAQAAAAAAAAANAAgAAQAAAAAAAAAMAAgAAQAAAAAAAAALAAgAAQAAAAAAAAAPAAcAAQAAAAAAAAAOAAcAAQAAAAAAAAANAAcAAQAAAAAAAAAKAAcAAQAAAAAAAAAJAAcAAQAAAAAAAAAGAAcAAQAAAAAAAAAFAAcAAQAAAAAAAAACAAcAAQAAAAAAAAABAAcAAQAAAAAAAAD+/wcAAQAAAAAAAAD9/wcAAQAAAAAAAAD7/wcAAQAAAAAAAAD6/wcAAQAAAAAAAAD5/wcAAQAAAAAAAAD3/wcAAQAAAAAAAAD2/wcAAQAAAAAAAAD1/wcAAQAAAAAAAADz/wcAAQAAAAAAAADy/wcAAQAAAAAAAADx/wcAAQAAAAAAAADx/wgAAQAAAAAAAADy/wgAAQAAAAAAAADz/wgAAQAAAAAAAAD0/wgAAQAAAAAAAAD2/wgAAQAAAAAAAAD3/wgAAQAAAAAAAAD4/wgAAQAAAAAAAAD5/wgAAQAAAAAAAAD6/wgAAQAAAAAAAAD8/wgAAQAAAAAAAAD9/wgAAQAAAAAAAAD+/wgAAQAAAAAAAAD//wgAAQAAAAAAAAABAAgAAQAAAAAAAAACAAgAAQAAAAAAAAADAAgAAQAAAAAAAAAEAAgAAQAAAAAAAAAGAAgAAQAAAAAAAAAHAAgAAQAAAAAAAAAIAAgAAQAAAAAAAAAJAAgAAQAAAAAAAAAPAAYAAQAAAAAAAAAOAAYAAQAAAAAAAAANAAYAAQAAAAAAAAAMAAYAAQAAAAAAAAALAAYAAQAAAAAAAAAKAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAIAAYAAQAAAAAAAAAHAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAADAAYAAQAAAAAAAAACAAYAAQAAAAAAAAABAAYAAQAAAAAAAAAAAAYAAQAAAAAAAAD//wYAAQAAAAAAAAD+/wYAAQAAAAAAAAD9/wYAAQAAAAAAAAD8/wYAAQAAAAAAAAD7/wYAAQAAAAAAAAD6/wYAAQAAAAAAAAD5/wYAAQAAAAAAAAD4/wYAAQAAAAAAAAD3/wYAAQAAAAAAAAD2/wYAAQAAAAAAAAD1/wYAAQAAAAAAAAD0/wYAAQAAAAAAAADz/wYAAQAAAAAAAADy/wYAAQAAAAAAAADx/wYAAQAAAAAAAADw/wYAAQAAAAAAAADw/wUAAQAAAAAAAADw/wMAAQAAAAAAAADw/wIAAQAAAAAAAADx/wIAAQAAAAAAAADy/wIAAQATAAEAAADz/wIAAQAAAAAAAAD0/wIAAQAAAAAAAAD1/wIAAQAAAAAAAAD2/wIAAQAAAAAAAAD3/wIAAQAAAAAAAAD4/wIAAQAAAAAAAAD5/wIAAQAAAAAAAAD6/wIAAQAAAAAAAAD7/wIAAQAAAAAAAAD8/wIAAQAAAAAAAAD9/wIAAQAAAAAAAAD+/wIAAQAAAAAAAAD//wIAAQAAAAAAAAAAAAIAAQAAAAAAAAABAAIAAQAAAAAAAAACAAIAAQAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAAIAAQAAAAAAAAAGAAIAAQAAAAAAAAAHAAIAAQAAAAAAAAAIAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAKAAIAAQAAAAAAAAALAAIAAQAAAAAAAAAMAAIAAQATAAEAAAANAAIAAQATAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAOAAUAAQAAAAAAAAANAAUAAQAAAAAAAAAMAAUAAQAAAAAAAAALAAUAAQAAAAAAAAAKAAUAAQAAAAAAAAAJAAUAAQAAAAAAAAAIAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAEAAUAAQAAAAAAAAADAAUAAQAAAAAAAAACAAUAAQAAAAAAAAABAAUAAQAAAAAAAAAAAAUAAQAAAAAAAAD//wUAAQAAAAAAAAD+/wUAAQAAAAAAAAD9/wUAAQAAAAAAAAD8/wUAAQAAAAAAAAD7/wUAAQAAAAAAAAD6/wUAAQAAAAAAAAD5/wUAAQAAAAAAAAD4/wUAAQAAAAAAAAD3/wUAAQAAAAAAAAD2/wUAAQAAAAAAAAD1/wUAAQAAAAAAAAD0/wUAAQAAAAAAAADz/wUAAQAAAAAAAADy/wUAAQAAAAAAAADx/wUAAQAAAAAAAADw/wQAAQAAAAAAAADx/wQAAQAAAAAAAADy/wQAAQAAAAAAAADz/wQAAQAAAAAAAAD0/wQAAQAAAAAAAAD1/wQAAQAAAAAAAAD2/wQAAQAAAAAAAAD3/wQAAQAAAAAAAAD4/wQAAQAAAAAAAAD5/wQAAQAAAAAAAAD6/wQAAQAAAAAAAAD7/wQAAQAAAAAAAAD8/wQAAQAAAAAAAAD9/wQAAQAAAAAAAAD+/wQAAQAAAAAAAAD//wQAAQAAAAAAAAAAAAQAAQAAAAAAAAABAAQAAQAAAAAAAAACAAQAAQAAAAAAAAADAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAKAAQAAQAAAAAAAAALAAQAAQAAAAAAAAAMAAQAAQAAAAAAAAANAAQAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAMAAQAAAAAAAAANAAMAAQATAAEAAAAMAAMAAQAAAAAAAAALAAMAAQAAAAAAAAAKAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAIAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAADAAMAAQAAAAAAAAACAAMAAQAAAAAAAAABAAMAAQAAAAAAAAAAAAMAAQAAAAAAAAD//wMAAQAAAAAAAAD+/wMAAQAAAAAAAAD9/wMAAQAAAAAAAAD8/wMAAQAAAAAAAAD7/wMAAQAAAAAAAAD6/wMAAQAAAAAAAAD5/wMAAQAAAAAAAAD4/wMAAQAAAAAAAAD3/wMAAQAAAAAAAAD2/wMAAQAAAAAAAAD1/wMAAQAAAAAAAAD0/wMAAQAAAAAAAADz/wMAAQAAAAAAAADy/wMAAQAAAAAAAADx/wMAAQAAAAAAAAAOAAIAAQAAAAAAAADt//X/AQAAAAAAAADt//b/AQAAAAAAAADt//f/AQAAAAAAAADt//j/AQAAAAAAAADt//n/AQAAAAAAAADt//r/AQAAAAAAAADt//v/AQAAAAAAAADt//z/AQAAAAAAAADt//3/AQAAAAAAAADt//7/AQAAAAAAAADt////AQAAAAAAAADt/wAAAQAAAAAAAADt/wEAAQAAAAAAAADt/wIAAQAAAAAAAADt/wMAAQAAAAAAAADt/wQAAQAAAAAAAADt/wUAAQAAAAAAAADt/wYAAQAAAAAAAADt/wcAAQAAAAAAAADt/wgAAQAAAAAAAADt/wkAAQAAAAAAAADt/woAAQAAAAAAAADu//X/AQAAAAAAAADv//X/AQAAAAAAAADw//X/AQAAAAAAAADx//X/AQAAAAAAAADy//X/AQAAAAAAAADz//X/AQAAAAAAAAD0//X/AQAAAAAAAAD1//X/AQAAAAAAAAD2//X/AQAAAAAAAAD3//X/AQAAAAAAAAD4//X/AQAAAAAAAAD5//X/AQAAAAAAAAD6//X/AQAAAAAAAAD7//X/AQAAAAAAAAD8//X/AQAAAAAAAAD9//X/AQAAAAAAAAD+//X/AQAAAAAAAAD///X/AQAAAAAAAAAAAPX/AQAAAAAAAAABAPX/AQAAAAAAAAACAPX/AQAAAAAAAAADAPX/AQAAAAAAAAAEAPX/AQAAAAAAAAAFAPX/AQAAAAAAAAAGAPX/AQAAAAAAAAAHAPX/AQAAAAAAAAAIAPX/AQAAAAAAAAAJAPX/AQAAAAAAAAAKAPX/AQAAAAAAAAALAPX/AQAAAAAAAAAMAPX/AQAAAAAAAAANAPX/AQAAAAAAAAAOAPX/AQAAAAAAAAAPAPX/AQAAAAAAAAAQAPX/AQAAAAAAAAARAPX/AQAAAAAAAAASAPX/AQAAAAAAAAASAPb/AQAAAAAAAAASAPf/AQAAAAAAAAASAPj/AQAAAAAAAAASAPn/AQAAAAAAAAASAPr/AQAAAAAAAAASAPv/AQAAAAAAAAASAPz/AQAAAAAAAAASAP3/AQAAAAAAAAASAP7/AQAAAAAAAAASAP//AQAAAAAAAAASAAAAAQAAAAAAAAASAAEAAQAAAAAAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAASAAoAAQAAAAAAAAARAAoAAQAAAAAAAAAQAAoAAQAAAAAAAAAPAAoAAQAAAAAAAAAOAAoAAQAAAAAAAAANAAoAAQAAAAAAAAAMAAoAAQAAAAAAAAALAAoAAQAAAAAAAAAKAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAIAAoAAQAAAAAAAAAHAAoAAQAAAAAAAAAGAAoAAQAAAAAAAAAFAAoAAQAAAAAAAAAEAAoAAQAAAAAAAAADAAoAAQAAAAAAAAACAAoAAQAAAAAAAAABAAoAAQAAAAAAAAAAAAoAAQAAAAAAAAD//woAAQAAAAAAAAD+/woAAQAAAAAAAAD9/woAAQAAAAAAAAD8/woAAQAAAAAAAAD7/woAAQAAAAAAAAD6/woAAQAAAAAAAAD5/woAAQAAAAAAAAD4/woAAQAAAAAAAAD3/woAAQAAAAAAAAD2/woAAQAAAAAAAAD1/woAAQAAAAAAAAD0/woAAQAAAAAAAADz/woAAQAAAAAAAADy/woAAQAAAAAAAADx/woAAQAAAAAAAADw/woAAQAAAAAAAADv/woAAQAAAAAAAADu/woAAQAAAAAAAADw/wcAAQAAAAAAAAD0/wcAAQAAAAAAAAD4/wcAAQAAAAAAAAD8/wcAAQAAAAAAAAD//wcAAQAAAAAAAAAAAAcAAQAAAAAAAAADAAcAAQAAAAAAAAAEAAcAAQAAAAAAAAAHAAcAAQAAAAAAAAAIAAcAAQAAAAAAAAALAAcAAQAAAAAAAAAMAAcAAQAAAAAAAAA=")
tile_set = ExtResource("2_5ouc1")

[node name="MemoryChoices" type="Node2D" parent="."]

[node name="MemoryObjectRed" parent="MemoryChoices" instance=ExtResource("3_dy1cj")]
position = Vector2(-124, 69)
scale = Vector2(0.5, 0.5)

[node name="MemoryObjectOrange" parent="MemoryChoices" instance=ExtResource("3_dy1cj")]
position = Vector2(-84, 69)
scale = Vector2(0.5, 0.5)
color = 1

[node name="Sprite2D" parent="MemoryChoices/MemoryObjectOrange" index="0"]
texture = ExtResource("4_hsgpn")

[node name="MemoryObjectYellow" parent="MemoryChoices" instance=ExtResource("3_dy1cj")]
position = Vector2(-44, 69)
scale = Vector2(0.5, 0.5)
color = 2

[node name="Sprite2D" parent="MemoryChoices/MemoryObjectYellow" index="0"]
texture = ExtResource("5_0530w")

[node name="MemoryObjectGreen" parent="MemoryChoices" instance=ExtResource("3_dy1cj")]
position = Vector2(-4, 69)
scale = Vector2(0.5, 0.5)
color = 3

[node name="Sprite2D" parent="MemoryChoices/MemoryObjectGreen" index="0"]
texture = ExtResource("6_exu8n")

[node name="MemoryObjectBlue" parent="MemoryChoices" instance=ExtResource("3_dy1cj")]
position = Vector2(36, 69)
scale = Vector2(0.5, 0.5)
color = 4

[node name="Sprite2D" parent="MemoryChoices/MemoryObjectBlue" index="0"]
texture = ExtResource("7_dit4u")

[node name="MemoryObjectPurple" parent="MemoryChoices" instance=ExtResource("3_dy1cj")]
position = Vector2(76, 69)
scale = Vector2(0.5, 0.5)
color = 5

[node name="Sprite2D" parent="MemoryChoices/MemoryObjectPurple" index="0"]
texture = ExtResource("8_fodfo")

[node name="MemoryObjectPink" parent="MemoryChoices" instance=ExtResource("3_dy1cj")]
position = Vector2(116, 69)
scale = Vector2(0.5, 0.5)
color = 6

[node name="Sprite2D" parent="MemoryChoices/MemoryObjectPink" index="0"]
texture = ExtResource("9_foywg")

[node name="MemoryHistory" type="Node2D" parent="."]
script = ExtResource("10_ptysf")

[node name="MemoryObject" parent="MemoryHistory" instance=ExtResource("3_dy1cj")]
position = Vector2(-36, -11)
scale = Vector2(0.5, 0.5)

[node name="MemoryObject2" parent="MemoryHistory" instance=ExtResource("3_dy1cj")]
position = Vector2(-28, -11)
scale = Vector2(0.5, 0.5)

[node name="MemoryObject3" parent="MemoryHistory" instance=ExtResource("3_dy1cj")]
position = Vector2(-20, -11)
scale = Vector2(0.5, 0.5)

[node name="MemoryObject4" parent="MemoryHistory" instance=ExtResource("3_dy1cj")]
position = Vector2(-12, -11)
scale = Vector2(0.5, 0.5)

[node name="MemoryObject5" parent="MemoryHistory" instance=ExtResource("3_dy1cj")]
position = Vector2(-4, -11)
scale = Vector2(0.5, 0.5)

[node name="MemoryObject6" parent="MemoryHistory" instance=ExtResource("3_dy1cj")]
position = Vector2(4, -11)
scale = Vector2(0.5, 0.5)

[node name="MemoryObject7" parent="MemoryHistory" instance=ExtResource("3_dy1cj")]
position = Vector2(12, -11)
scale = Vector2(0.5, 0.5)

[node name="MemoryObject8" parent="MemoryHistory" instance=ExtResource("3_dy1cj")]
position = Vector2(20, -11)
scale = Vector2(0.5, 0.5)

[node name="MemoryObject9" parent="MemoryHistory" instance=ExtResource("3_dy1cj")]
position = Vector2(28, -11)
scale = Vector2(0.5, 0.5)

[node name="MemoryObject10" parent="MemoryHistory" instance=ExtResource("3_dy1cj")]
position = Vector2(36, -11)
scale = Vector2(0.5, 0.5)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="CountdownLabel" parent="." instance=ExtResource("10_uxlvj")]

[node name="MemoryQuestionLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -67.0
offset_right = 233.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_mslxx")
theme_override_font_sizes/font_size = 48
text = "sample text"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_bg1cy")

[node name="Timer" type="Timer" parent="MemoryQuestionLabel"]
wait_time = 0.4

[node name="Player" parent="." instance=ExtResource("1_p60kw")]
position = Vector2(-36, 46)

[editable path="MemoryChoices/MemoryObjectRed"]
[editable path="MemoryChoices/MemoryObjectOrange"]
[editable path="MemoryChoices/MemoryObjectYellow"]
[editable path="MemoryChoices/MemoryObjectGreen"]
[editable path="MemoryChoices/MemoryObjectBlue"]
[editable path="MemoryChoices/MemoryObjectPurple"]
[editable path="MemoryChoices/MemoryObjectPink"]
